assets/css/styles.css
/* ... */
.Settings-Select select {
	padding: 7px 8px;
    width: 300px;
    font-size: 12px;
    border: none;
    box-shadow: none;
    background: transparent;
    background-image: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

.Settings-Text  {
	float:right;
	font-size: 12px;
	padding: 7px 8px;
	position: relative;
  height: 30px;
  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba(228, 229, 231, 0.5);
  background-color: #ffffff;
  border: solid 1px #d2d3d9;
  margin-right: 5px;
  width:auto;

}
.user-btn {

  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba(219, 219, 219, 0.5);
  background-color: #ffffff;
  border: solid 1px #d2d3d9;
  display:table-cell;
  vertical-align: middle;
  padding: 8px 25px;
  font-size: 13.5px;
  font-weight: bold;

  cursor:pointer;
  float:right;
}
.user-btn:hover {
	border-color: #999;
}
.message-btn {

}
.follow-btn {
	margin-left:0px;
}
.user-action-bar {
/*
	margin:0 auto;
	margin-left:980px;
	margin-top: -50px;
*/
width: 900px;
text-align: right;
margin:0 auto;
margin-top:-40px;
text-align: right;
}

.modal-close-button {
  float:right;
  display: table-cell;
  cursor: pointer;
  font-family: "Ionicons";
  text-align: center;
  width: 38px;
  height: 30px;
  vertical-align: middle;
  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba(219, 219, 219, 0.5);
  background-color: #ffffff;
  border: solid 1px #d2d3d9;
}
.modal-close-button img {
	width:30px;
	height:30px;
}
.modal-close-button:hover {
	border: 1px solid black;
}

.profile-card-div {
	  display: flex;
	  width:306px;
	  float:left;
	  padding-right: 15px;
	  padding-bottom: 16px;
	  box-sizing: border-box;
	  margin: 2px;
}

.Profile-Card {
  width: 306px;
  height: 214px;
  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba(219, 219, 219, 0.5);
  background-color: #ffffff;
  border: solid 1px #d2d3d9;
  margin-right:15px;
  flex: 1;
  margin-right: 15px;
}

.full-rating-box-cats { 
	display: table-cell;width:240px;
}
.Profile-Card-Hero {
  width: 304px;
  height: 101px;
  border-radius: 2px;  
  background-position:center;
  background-size: cover, cover;
  border-bottom: solid 1px #d2d3d9;
}
.Profile-Card-Caption {
	padding: 8px 12px;
}
.Profile-Card-Name {
	font-size:17px;
	font-weight: bolder;
}
.Profile-Card-ShortDesc {
	font-size:14px;
	height:36px;
	margin-bottom: 15px;
	overflow: hidden;
	text-overflow: ellipsis;
}
.Profile-Card-Avatar {
	z-index:1000;
	float:right;
	width: 50px;
	margin: 5px 10px;
	height: 50px;
	border-radius: 49px;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
	border: solid 2px #ffffff;
	background-repeat: no-repeat;
	background-size: 50px 50px;
	float: left;
	margin-top:38px;
}
.Profile-Card-MetaBar {
	font-size:13px;
	color:#252525;
	display: flex;
}
.Profile-Card-MetaBar > div {
	display: table-cell;
	flex: 1;
	vertical-align: middle;
}
.Profile-Card-Location {
	overflow: hidden;
	text-overflow: ellipsis;
	height:18px;
}
.Profile-Card-Rating { 
	text-align:right;
}

.list-view-header {
	width: 100%;
  height: 43px;
  border-radius: 2px;
  background-color: rgba(255, 255, 255, 0.85);
  border: solid 1px #d2d3d9;
  display: flex;
  
}
.list-view-header .row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding:12px 15px;
}
.list-view-header .header-row > div {
	font-size: 14px;
	
	font-weight:bold;
}
.list-view-header .column {
	font-size: 14px;
	font-weight:bold;
/* 	flex: 1; */
	vertical-align: middle;
}
.list-view-content .row {
  width: 670px;
  height: 41px;
  padding:12px 15px;
  box-shadow: 0 1px 0 0 rgba(219, 219, 219, 0.5);
  background-color: rgba(255, 255, 255, 0.85);
  border: solid 1px #d2d3d9;
  border-top:none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  
}
.list-view-content .column {
	font-size: 14px;
/* 	flex:1; */

}

.Store-Col1  {
	display:table-cell; margin-right: 10px; vertical-align: top
	
}

.about-box-details {
	padding:10px;
}
.More-Listing-Unit {
	display: flex;
	justify-content: center;
}

.mobile-carousel { display: none; }

.header-search { 
	float:right;
  width: 240px;
  height: 30px;
  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba(228, 229, 231, 0.5);
  background-color: #ffffff;
  border: solid 1px #d2d3d9;
  margin-right: 6px;
}
.header-search-input {
	border:none;
	border:0;
	height:30px;
	width:240px;
	padding: 0 5px;
	font-size:13.5px;
}

.Purchase-Button-Col2 {
	flex:1;
}

.carousel { width: 100%; margin: 10px 0 25px 0; }
.carousel-photo-stage {
	height: 700px;
	background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.mobile-carousel { width:100%; margin:0; }
.mobile-carousel-photo-stage { 
	height: 300px;
	background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.carousel-thumb-bar {
	margin-top: -80px;
	background-color: black;
	opacity: 0.25;
	height: 80px;
	z-index: 998;
}
.carousel-thumbs {
	margin: -70px 10px 0 10px;
	width:936px;
		overflow: auto;
overflow-y: hidden;
}
.carousel-thumb {
	width: 60px;
  height: 60px;
  border-radius: 1px;
  background-color: #2a2a2a;
  border: solid 4px #ffffff;
  float:left;
  background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    cursor: pointer;

}

.Store-Header-Mobile {
	display:none;
}

.Buy-Button-Divider {
	display:table-cell;float:left;margin: 0 12px;width: 0px;  height: 27px;  border: solid 0.5px #d2d3d9;
}

.config-btn-frame {
	display: table-cell;text-align:right;margin-right:10px;vertical-align: middle;padding-right:10px;
}

.footer-icon { display: table-cell;vertical-align: middle; }

.Buy-Button-Review-Caption {
    display:table-cell;font-size:12.5px;padding:0;vertical-align: middle;
}
.Buy-Button-Free-Shipping {
	width: inherit;  height: inherit;   display: flex; align-items: center;
	
}
.Buy-Button-Social {
	display: table-cell;vertical-align: middle;
}

.More-Listing-Unit { 
	text-align:center;vertical-align:top;width:25%;margin:0;
}

#listing-mobile-byline { display:none; }
/* ... */

